# stl-studenci

./: CMakeLists.txt  Student.cpp  Student.hpp  main.cpp  studenci.txt
